<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controllers.signUp"
    android:background="@drawable/background_intro">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="65dp"
            android:gravity="center"
            android:text="Signup"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold">

        </TextView>


        <EditText
            android:id="@+id/editTextNavn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="Indtast kodeord"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextGodkendtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="Bekræft kodeord"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registrerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:background="@drawable/buttondesignfrontpage"
            android:text="Registrer"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Har du allerede en konto?"
            android:textStyle="italic" />

        <Button
            android:id="@+id/redirectToLogInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/buttondesignfrontpage"
            android:text="Log-in"
            android:textColor="@color/black"
            app:backgroundTint="@null" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>