<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controllers.frontPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/besammen_forside">

    </ImageView>

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:background="@drawable/buttondesignfrontpage"
        android:onClick="goToLogIn"
        android:text="Log ind"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttondesignfrontpage"
        android:onClick="goToSignUp"
        android:text="Registrer"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />


</androidx.constraintlayout.widget.ConstraintLayout>