...
            android:layout_marginTop="50dp"
            android:text="Vælg din diagnose for at blive tildelt en støttegruppe"
            />


        <Spinner
            android:id="@+id/spinnerDiagnose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints="Diagnose"
            />

        <Button
            android:id="@+id/submitDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mød din støttegruppe!"
            android:textColor="#000000"
            android:background="@drawable/buttondesignfrontpage"
            app:backgroundTint = "@null"
            />

        <Button
...
